svgitem: do not upscale svg when using fractional scaling

BUG: 461682
FIXED-IN: 5.101